--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
     <div class="wrapper">
       <div class="links">
-        <a href="https://bit.ly/admprojects">
-          <div class="icon" id="tracker">
-            <i class="fa fa-tasks fa-4x" aria-hidden="true"></i>
-            <span>Project Tracker</span>
+        <a href="https://app.asana.com/0/371266527754719/list">
+          <div class="icon-update" id="drive">
+            <img style="height: 60px; width: auto;" src="images/asana.png" alt=""> <br>
+            <span style="font-size: 20px;">Current Projects</span>
           </div>
         </a>
-        <a href="https://docs.google.com/a/champlain.edu/spreadsheets/d/1MoFqHQQevYCX_g62CETureLqqD_6vTOFMabQMuQ9DFk/edit?usp=sharing">
+        <a href="https://docs.google.com/a/champlain.edu/spreadsheets/d/189hhOKLyQep-HZAtYMDuhOw31GTwqYXWBiyOQI7r9a8/edit?usp=sharing">
           <div class="icon" id="schedule">
             <i class="fa fa-th-list fa-4x" aria-hidden="true"></i>
             <span>Schedule</span>
@@ -63,25 +63,18 @@
             <span>Google Drive</span>
           </div>
         </a>
-        <a href="http://bit.ly/F16SACoverage">
-          <div class="icon" id="coverage">
-            <i class="fa fa-clock-o fa-4x" aria-hidden="true"></i>
-            <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true"></i>
-            <span>Shift Coverage</span>
-          </div>
-        </a>
         <a href="http://bit.ly/satrainingprogress">
           <div class="icon" id="wings">
             <img src="images/wings.png" alt="">
             <span>Wings Progress</span>
           </div>
         </a>
-        <a href="pages/saotm.html">
+        <!-- <a href="pages/saotm.html">
           <div class="icon" id="saotm">
             <i class="fa fa-user fa-4x" aria-hidden="true"></i>
             <span>SAOTM</span>
           </div>
-        </a>
+        </a> -->
         <a href="http://bit.ly/SATourFeedback">
           <div class="icon-update" id="feedback">
             <i class="fa fa-check-square-o fa-4x" aria-hidden="true"></i> <br>
