Major styling update, made to look like Champlains official website

--- a/index.html
+++ b/index.html
@@ -14,14 +14,8 @@
     <nav>
       <!-- <img src="logo_color.png" alt="" /> -->
       <a id="logo-wrapper" href="index.html">
-        <div class="logo">
-          <span>STU</span>
-          <img src="images/shield_color.png" alt=""/>
-          <span>ENT &nbsp;</span>
-        </div>
-        <div class="logo">
-          <span>AMBASSADORS</span>
-        </div>
+        <img src="images/full.png" alt="">
+        <span>Student Ambassadors</span>
       </a>
 
       <div class="pages">
@@ -61,12 +55,6 @@
           <div class="icon" id="drive">
             <img src="images/googledrive.ico" alt="">
             <span>Google Drive</span>
-          </div>
-        </a>
-        <a href="http://bit.ly/satrainingprogress">
-          <div class="icon" id="wings">
-            <img src="images/wings.png" alt="">
-            <span>Wings Progress</span>
           </div>
         </a>
         <!-- <a href="pages/saotm.html">
