Updated the icognito state to match the new styling, pushed over the pages nav bar to match the new styling

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         element.find("#secret").show();
         element.find("span").text(text);
         setTimeout(function(){
-          element.css("background-color", "#00aeef");
+          element.css("background-color", "rgba(35,31,32,.9)");
           element.find("span").css("font-size", "");
           element.removeClass("animated shake");
           element.find("i").show();
