--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -14,15 +14,9 @@
     <!--Navigation bar!-->
     <nav>
       <!-- <img src="logo_color.png" alt="" /> -->
-      <a id="logo-wrapper" href="../index.html">
-        <div class="logo">
-          <span>STU</span>
-          <img src="../images/shield_color.png" alt=""/>
-          <span>ENT &nbsp;</span>
-        </div>
-        <div class="logo">
-          <span>AMBASSADORS</span>
-        </div>
+      <a id="logo-wrapper" href="index.html">
+        <img src="../images/full.png" alt="">
+        <span>Student Ambassadors</span>
       </a>
 
       <div class="pages">
