--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -48,11 +48,11 @@
             <tr class="importantcontact"><td>Jovan Ellis</td><td>5805</td></tr>
             <tr class="importantcontact"><td>Veronica Lewis</td><td>6635</td></tr>
             <tr><td>Julia Caminiti</td><td>5994</td></tr>
+            <tr><td>Tyler Jennings-Peczka</td><td>6646</td></tr>
             <tr><td>Howie LeBlanco</td><td>6639</td></tr>
             <tr><td>Nicole Lentine</td><td>6642</td></tr>
             <tr><td>Nadia Mitchell</td><td>6644</td></tr>
             <tr><td>Chris Perlongo</td><td>5740</td></tr>
-            <tr><td>Alana Perry</td><td>6646</td></tr>
           </table>
         </div>
         <div class="extensionsbox">
