--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <span style="font-size: 20px;">Current Projects</span>
           </div>
         </a>
-        <a href="https://docs.google.com/spreadsheets/d/1xE9OaGD19nNa7C21uRgtOB0_ax2KGHN3eR9LierVP9w/edit?usp=sharing">
+        <a href="https://docs.google.com/spreadsheets/d/1YzUxks57LnKR5XtJ7lN8VzUXqNKd4ANV6aEZrtddjKI/edit#gid=0">
           <div class="icon" id="schedule">
             <i class="fa fa-th-list fa-4x" aria-hidden="true"></i>
             <span>Schedule</span>
