--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -31,15 +31,15 @@
         <div class="extensionsbox">
           <h1>ADMISSIONS OPS TEAM</h1>
           <table>
-            <tr class="importantcontact"><td>Sue Chamberlain</td><td>5812</td></tr>
-            <tr class="importantcontact"><td>Almir Salkic</td><td>6640</td></tr>
-            <tr class="importantcontact"><td>Irene Webster (Front Desk)</td><td>5990</td></tr>
-            <tr><td>Direct Line</td><td>2727</td></tr>
-            <tr><td>Mike Crowley</td><td>6636</td></tr>
-            <tr><td>Grace Curley</td><td>6429</td></tr>
-            <tr><td>Karen Heil</td><td>5902</td></tr>
-            <tr><td>Diana Matot</td><td>5975</td></tr>
-            <tr><td>Ginger Pressey</td><td>6288</td></tr>
+            <tr class="importantcontact"><td>Direct Line</td><td>2727</td></tr>
+            <tr class="importantcontact"><td>Top Desk</td><td>2313</td></tr>
+            <tr class="importantcontact"><td>Front Desk</td><td>5990</td></tr>
+            <tr class="importantcontact"><td>Pressey, Ginger</td><td>6288</td></tr>
+            <tr class="importantcontact"><td>Salkic, Almir</td><td>6640</td></tr>
+            <tr><td>Andrewes, Ariana</td><td>6636</td></tr>
+            <tr><td>Chamberlain, Sue</td><td>5812</td></tr>
+            <tr><td>Curley, Grace</td><td>6429</td></tr>
+            <tr><td>Heil, Karen</td><td>5902</td></tr>
           </table>
         </div>
         <div class="extensionsbox">
