--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -45,14 +45,13 @@
         <div class="extensionsbox">
           <h1>ADMISSIONS COUNSELORS</h1>
           <table>
-            <tr class="importantcontact"><td>Jovan Ellis</td><td>5805</td></tr>
-            <tr class="importantcontact"><td>Veronica Lewis</td><td>6635</td></tr>
+            <tr class="importantcontact"><td>Howie LeBlanco</td><td>6639</td></tr>
+            <tr class="importantcontact"><td>Dominique Cornacchia</td><td>6642</td></tr>
             <tr><td>Julia Caminiti</td><td>5994</td></tr>
-            <tr><td>Tyler Jennings-Peczka</td><td>6646</td></tr>
-            <tr><td>Howie LeBlanco</td><td>6639</td></tr>
-            <tr><td>Nicole Lentine</td><td>6642</td></tr>
+            <tr><td>Hannah Kingsley</td><td>6646</td></tr> 
+            <tr><td>Leah Miller</td><td>6635</td></tr>             
             <tr><td>Nadia Mitchell</td><td>6644</td></tr>
-            <tr><td>Chris Perlongo</td><td>5740</td></tr>
+            <tr><td>Director's Office</td><td>5740</td></tr>
           </table>
         </div>
         <div class="extensionsbox">
@@ -123,7 +122,7 @@
             <tr><td>Event Center</td><td>5957</td></tr>
             <tr><td>Mike Jacobs (Production Stage)</td><td>5779</td></tr>
             <tr><td>Help Desk/Champ Support</td><td>2710</td></tr>
-            <tr><td>LEAD</td><td>5857</td></tr>
+            <tr><td>InSight</td><td>5857</td></tr>
             <tr><td>Mail Center</td><td>2385</td></tr>
             <tr><td>Military &amp; Veterans Advisor</td><td>5778</td></tr>
             <tr><td>Parking &amp; Transportation (Nic Anderson)</td><td>8464</td></tr>
