--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -80,7 +80,7 @@
           </table>
         </div>
         <div class="extensionsbox">
-          <h1>Compass</h1>
+          <h1>COMPASS</h1>
           <table>
             <tr class="importantcontact"><td>Direct Line</td><td>2777</td></tr>
             <tr><td>Sara Commins</td><td>5970</td></tr>
