--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -32,14 +32,12 @@
           <h1>ADMISSIONS OPS TEAM</h1>
           <table>
             <tr class="importantcontact"><td>Direct Line</td><td>2727</td></tr>
-            <tr class="importantcontact"><td>Top Desk</td><td>2313</td></tr>
-            <tr class="importantcontact"><td>Front Desk</td><td>5990</td></tr>
-            <tr class="importantcontact"><td>Pressey, Ginger</td><td>6288</td></tr>
-            <tr class="importantcontact"><td>Salkic, Almir</td><td>6640</td></tr>
-            <tr><td>Andrewes, Ariana</td><td>6636</td></tr>
-            <tr><td>Chamberlain, Sue</td><td>5812</td></tr>
-            <tr><td>Curley, Grace</td><td>6429</td></tr>
-            <tr><td>Heil, Karen</td><td>5902</td></tr>
+            <tr class="importantcontact"><td>Almir Salkic</td><td>6640</td></tr>
+            <tr class="importantcontact"><td>Ginger Pressey</td><td>6288</td></tr>
+            <tr><td>Ariana Andrewes</td><td>6636</td></tr>
+            <tr><td>Grace Curley</td><td>6429</td></tr>
+            <tr><td>Karen Heil</td><td>5902</td></tr>
+            <tr><td>Sue Chamberlain</td><td>5812</td></tr>
           </table>
         </div>
         <div class="extensionsbox">
@@ -60,64 +58,82 @@
             <tr class="importantcontact"><td>Student Ambassadors</td><td>2305</td></tr>
             <tr class="importantcontact"><td>Top Desk</td><td>2313</td></tr>
             <tr class="importantcontact"><td>Front Desk</td><td>5990</td></tr>
-              <tr><td>Financial Aid Direct Line</td><td>2906</td></tr>
-              <tr><td>Student Accounts Direct Line</td><td>2330</td></tr>
-              <tr><td>Admissions Operations Direct Line</td><td>2727</td></tr>
+            <tr class="importantcontact"><td>Admissions Interns</td><td>8448 or 6641</td></tr>
+            <tr><td>Compass Direct Line</td><td>2777</td></tr>
+            <tr><td>Admissions Operations Direct Line</td><td>2727</td></tr>
           </table>
         </div>
         <div class="extensionsbox">
           <h1>STUDENT ACCOUNTS</h1>
           <table>
-            <tr class="importantcontact"><td>Direct Line</td><td>2330</td></tr>
-            <tr><td>Shelley Bernier</td><td>6482</td></tr>
-            <tr><td>Mikael Blanco</td><td>5718</td></tr>
+            <tr class="importantcontact"><td>Direct Line</td><td>2777</td></tr>
+            <tr class="importantcontact"><td>Student Employee Desk</td><td>2330</td></tr>
             <tr><td>Diane Byrnes</td><td>6419</td></tr>
-            <tr><td>Teresa Crowley</td><td>6473</td></tr>
-            <tr><td>Sue Garrow</td><td>6483</td></tr>
-            <tr><td>Pat Kennedy</td><td>6484</td></tr>
-            <tr><td>Tami Patnode</td><td>6664</td></tr>
             <tr><td>Maureen Whitney</td><td>5718</td></tr>
+            <tr><td>Mikael Blanco</td><td>5969</td><tr>
+            <tr><td>Mimi Trippany</td><td>6606</td></tr>
+            <tr><td>Shelley Bernier</td><td>6482</td></tr>
+            <tr><td>Sue Garrow</td><td>6483</td></tr>
+            <tr><td>Tami Patnode</td><td>6664</td></tr>
           </table>
         </div>
         <div class="extensionsbox">
           <h1>COMPASS</h1>
           <table>
             <tr class="importantcontact"><td>Direct Line</td><td>2777</td></tr>
-            <tr><td>Sara Commins</td><td>5970</td></tr>
-            <tr><td>Kristen Dolan</td><td>5848</td></tr>
+            <tr><td>Christa Hagan</td><td>6667</td></tr>
+            <tr><td>Irene Webster</td><td>6626</td></tr>
+            <tr><td>Kari Banas</td><td>5831</td></tr>
+            <tr><td>Kim Moran</td><td>5848</td></tr>
           </table>
         </div>
         <div class="extensionsbox">
           <h1>GRAD ADMISSIONS</h1>
           <table>
-            <tr><td>Duncan Adamson</td><td>6645</td></tr>
-            <tr><td>Carin McCarthy</td><td>6603</td></tr>
+            <tr><td>Work in Progress</td><td>6645</td></tr>
           </table>
         </div>
         <div class="extensionsbox">
           <h1>FINANCIAL AID</h1>
           <table>
-            <tr class="importantcontact"><td>Direct Line</td><td>2906</td></tr>
-            <tr><td>Katrina Bennett</td><td>5766</td></tr>
-            <tr><td>David Boyle</td><td>5778</td></tr>
+            <tr class="importantcontact"><td>Trad Queue</td><td>2906</td></tr>
+            <tr class="importantcontact"><td>CPS Queue: Katie/Marianne</td><td>2906</td></tr>
+            <tr><td>Molly Pepper (A-D)</td><td>5701</td></tr>
+            <tr><td>Marianne Werner (A-K)</td><td>5766</td></tr>
+            <tr><td>Baine Trombley (E-K)</td><td>6665</td></tr>
+            <tr><td>Mary Miller (L-Q)</td><td>5414</td></tr>
+            <tr><td>John Lanzetta (R-Z)</td><td>2789</td></tr>
+            <tr><td>Carolyn Walsh (Lindy)</td><td>5777</td></tr>
             <tr><td>Greg Davis</td><td>5435</td></tr>
-            <tr><td>Rick Doran</td><td>5474</td></tr>
             <tr><td>Heather Hanson</td><td>6430</td></tr>
+            <tr><td>Katie Mumbauer</td><td>6682</td></tr>
             <tr><td>Kristi Jovell</td><td>5728</td></tr>
-            <tr><td>John Lanzetta</td><td>2789</td></tr>
-            <tr><td>Molly Pepper</td><td>5701</td></tr>
-            <tr><td>Baine Trombley</td><td>6665</td></tr>
-            <tr><td>Michelle Veladota</td><td>6435</td></tr>
-            <tr><td>Carolyn Walsh</td><td>4064</td></tr>
+            <tr><td>Rick Doran</td><td>5474</td></tr>
           </table>
         </div>
         <div class="extensionsbox">
-          <h1>OTHER/GENERAL</h1>
+          <h1>REGISTRAR'S OFFICE</h1>
           <table>
+            <tr><td>Amy Eastman (ITS & EHS Specialist)</td><td>6463</td></tr>
+            <tr><td>Matt Stattel (SSB, Game Art, & Game Design Specialist)</td><td>2720</td></tr>
+            <tr><td>Pam Crowley (CCM Specialist)</td><td>2720</td></tr>
+            <tr><td>Corinne Novetti</td><td>6461</td></tr>
+            <tr><td>Jen Reardon-Brown</td><td>5850</td></tr>
+            <tr><td>Nick Spaziani</td><td>6418</td></tr>
+            <tr><td>Tara Arneson</td><td>5702</td></tr>
+          </table>
+        </div>
+        <div class="extensionsbox">
+          <h1>GENERAL/OTHER</h1>
+          <table>
+            <h2>Other Campus Resources</h>
             <tr><td>Campus Safety</td><td>6465</td></tr>
-            <tr><td>Campus Store</td><td>2754</td></tr>
+            <tr><td>Campus Store</td><td>8961</td></tr>
             <tr><td>Career Collaborative</td><td>2720</td></tr>
+            <tr><td>Clearinghouse</td><td>703-742-4200 #7 #4</td></tr>
             <tr><td>Continuing Prof. Studies</td><td>2637</td></tr>
+            <tr><td>Continuing Prof. Studies</td><td>2637</td></tr>
+            <tr><td>Gotta Finish VVV</td><td>2637</td></tr>
             <tr><td>Dining Services</td><td>2719</td></tr>
             <tr><td>Event Center</td><td>5957</td></tr>
             <tr><td>Mike Jacobs (Production Stage)</td><td>5779</td></tr>
@@ -133,6 +149,15 @@
             <tr><td>Student Ambassador Office</td><td>2305</td></tr>
             <tr><td>Top Desk</td><td>2313</td></tr>
             <tr><td>Vice President of Enrollment</td><td>5911</td></tr>
+          </table>
+        </div>
+        <div class="extensionsbox">
+          <h1>FAXES</h1>
+          <table>
+            <tr><td>Compass</td><td>4957</td></tr>
+            <tr><td>SA</td><td>4869</td></tr>
+            <tr><td>FA</td><td>2775</td></tr>
+            <tr><td>Admissions</td><td>2767</td></tr>
           </table>
         </div>
       </div>
