--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -126,29 +126,34 @@
         <div class="extensionsbox">
           <h1>GENERAL/OTHER</h1>
           <table>
-            <h2>Other Campus Resources</h>
+            <h3>Other Campus Resources</h3>
+            <tr><td>Accommodations (Skip Harris)</td><td>5961</td></tr>
             <tr><td>Campus Safety</td><td>6465</td></tr>
             <tr><td>Campus Store</td><td>8961</td></tr>
             <tr><td>Career Collaborative</td><td>2720</td></tr>
             <tr><td>Clearinghouse</td><td>703-742-4200 #7 #4</td></tr>
-            <tr><td>Continuing Prof. Studies</td><td>2637</td></tr>
-            <tr><td>Continuing Prof. Studies</td><td>2637</td></tr>
-            <tr><td>Gotta Finish VVV</td><td>2637</td></tr>
-            <tr><td>Dining Services</td><td>2719</td></tr>
+            <tr><td>Continuing Prof. Studies</td><td>2265</td></tr>
+            <tr><td>CPS Internal Transfers</td><td>8412</td></tr>
+            <tr><td>Dining Services/Sodexo</td><td>2719</td></tr>
             <tr><td>Event Center</td><td>5957</td></tr>
-            <tr><td>Mike Jacobs (Production Stage)</td><td>5779</td></tr>
             <tr><td>Help Desk/Champ Support</td><td>2710</td></tr>
-            <tr><td>InSight</td><td>5857</td></tr>
+            <tr><td>InSight (Jimena Huaco)</td><td>5857</td></tr>
             <tr><td>Mail Center</td><td>2385</td></tr>
-            <tr><td>Military &amp; Veterans Advisor</td><td>5778</td></tr>
+            <tr><td>Military &amp; Veterans Advisor (David Boyle)</td><td>5778</td></tr>
             <tr><td>Parking &amp; Transportation (Nic Anderson)</td><td>8464</td></tr>
+            <tr><td>People Center (Jackie Greer)</td><td>5779</td></tr>
             <tr><td>Physical Plant</td><td>2705</td></tr>
-            <tr><td>President's Office (Shaylea Scribner)</td><td>2733</td></tr>
-            <tr><td>Residential Life</td><td>2704</td></tr>
-            <tr><td>Student Activities</td><td>5904</td></tr>
-            <tr><td>Student Ambassador Office</td><td>2305</td></tr>
-            <tr><td>Top Desk</td><td>2313</td></tr>
-            <tr><td>Vice President of Enrollment</td><td>5911</td></tr>
+            <tr><td>President's Office (Shaylea Scribner)</td><td>2734</td></tr>
+            <tr><td>Production Stage (Mike Jacobs)</td><td>5779</td></tr>
+            <tr><td>Residential Life</td><td>2702</td></tr>
+            <tr><td>VP Enrollment Mgmt (Lisa Bunders)</td><td>5911</td></tr>
+            <h4>Office of International Education</h4>
+            <tr><td>Direct Line</td><td>8450</td></tr>
+            <tr><td>Elin Melchior</td><td>5842</td></tr>
+            <tr><td>Jessa Karki</td><td>6485</td></tr>
+            <h4>Student Activies Office</h4>
+            <tr><td>Direct Line</td><td>5904</td></tr>
+            <tr><td>Jared Cadrette</td><td>6436</td></tr>
           </table>
         </div>
         <div class="extensionsbox">
