Updated map (Should work?) 9/7/18

--- a/pages/counselormap.html
+++ b/pages/counselormap.html
@@ -28,7 +28,7 @@
 
     <div class="extensionswrapperwrapper">
       <div class="extensionswrapper">
-        <center><img src="../images/counselor_territory_201617.png", height="700vh"/> </center>
+        <center><img src="file:///C:/Users/studentambassador/Downloads/2019%20Territories%20FINAL.pdf", height="700vh"/> </center>
       </div>
     </div>
 
