Updated header issue (should work?) 9/7/18

--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -147,11 +147,11 @@
             <tr><td>Production Stage (Mike Jacobs)</td><td>5779</td></tr>
             <tr><td>Residential Life</td><td>2702</td></tr>
             <tr><td>VP Enrollment Mgmt (Lisa Bunders)</td><td>5911</td></tr>
-            <h4>Office of International Education</h4>
+            <tr class="importantcontact"><td>Office of International Education</td></tr>
             <tr><td>Direct Line</td><td>8450</td></tr>
             <tr><td>Elin Melchior</td><td>5842</td></tr>
             <tr><td>Jessa Karki</td><td>6485</td></tr>
-            <h4>Student Activies Office</h4>
+            <tr class="importantcontact"><td>Student Activies Office</td></tr>
             <tr><td>Direct Line</td><td>5904</td></tr>
             <tr><td>Jared Cadrette</td><td>6436</td></tr>
           </table>
