--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
             <span>SAOTM</span>
           </div>
         </a> -->
-        <a href="http://bit.ly/SATourFeedback">
-          <div class="icon-update" id="feedback">
-            <i class="fa fa-check-square-o fa-4x" aria-hidden="true"></i> <br>
+        <a href="https://docs.google.com/spreadsheets/d/1ev7lS0ICXlyy6qdzPdhAEI9-IoMSNL6b3Ba7VpzuRAg/edit#gid=1384320535">
+          <div class="icon-update" id="phone">
+            <img src="images/shield_white.png" alt=""> <br>
             <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="margin-top: -15px; margin-bottom: 10px;"></i>
-            <span>Tour Feedback</span>
+            <span>SA Phone List</span>
           </div>
         </a>
         <a href="https://www.champlain.edu/current-students">
