--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </a> -->
         <a href="https://docs.google.com/spreadsheets/d/1ev7lS0ICXlyy6qdzPdhAEI9-IoMSNL6b3Ba7VpzuRAg/edit#gid=1384320535">
           <div class="icon-update" id="phone">
-            <img src="images/phone_logo.jpg" alt=""> <br>
+            <img src="images/phone_logo.png" alt=""> <br>
             <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="margin-top: -15px; margin-bottom: 10px;"></i>
             <span>SA Phone List</span>
           </div>
