Updated map png (should now work?) 9/7/2018

--- a/pages/counselormap.html
+++ b/pages/counselormap.html
@@ -28,7 +28,7 @@
 
     <div class="extensionswrapperwrapper">
       <div class="extensionswrapper">
-        <center><img src="../images/Territories_Map_2019", height="700vh"/> </center>
+        <center><img src="../images/territory_map_2019.png", height="700vh"/> </center>
       </div>
     </div>
 
