--- a/pages/extensions.html
+++ b/pages/extensions.html
@@ -23,6 +23,7 @@
         <a href="../index.html"><li>Home</li></a>
         <a href="./extensions.html"><li>Extensions</li></a>
         <a href="./counselormap.html"><li>Counselor Map</li></a>
+        <a href="./counselormap.html"><li>Office Feedback</li></a>
       </div>
     </nav>
 
