--- a/pages/counselormap.html
+++ b/pages/counselormap.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" title="no title">
     <link rel="stylesheet" href="../styles/styles.css" media="screen" title="no title">
     <link rel="stylesheet" href="../styles/counselormap.css" media="screen" title="no title">
+    <link rel="stylesheet" href="../styles/feedback.html" media="screen" title="no title">
   </head>
   <body>
 
@@ -23,7 +24,7 @@
         <a href="../index.html"><li>Home</li></a>
         <a href="./extensions.html"><li>Extensions</li></a>
         <a href="./counselormap.html"><li>Counselor Map</li></a>
-        <a href="./officefeedback.html"><li>Office Feedback</li></a>
+        <a href="./feedback.html"><li>Office Feedback</li></a>
       </div>
     </nav>
 
