--- a/pages/saotm.html
+++ b/pages/saotm.html
@@ -29,6 +29,7 @@
         <a href="../index.html"><li>Home</li></a>
         <a href="./extensions.html"><li>Extensions</li></a>
         <a href="./counselormap.html"><li>Counselor Map</li></a>
+        <a href="./feedback.html"><li>Feedback</li></a>
       </div>
     </nav>
 
