--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a href="index.html"><li>Home</li></a>
         <a href="./pages/extensions.html"><li>Extensions</li></a>
         <a href="./pages/counselormap.html"><li>Counselor Map</li></a>
+        <a href="./feedback.html"><li>Office Feedback</li></a>
       </div>
     </nav>
 
