--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
             <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="margin-top: -15px; margin-bottom: 10px;"></i>
             <span>Workday</span>
           </div>
-          <a href="https://drive.google.com/drive/#my-drive">
-          <div class="icon" id="drive">
-            <img src="images/googledrive.ico" alt="">
+        <a href="pages/feedback.html">
+          <div class="icon-update" id="workday">
+            <img src="images/workday.png" alt=""> <br>
+            <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="margin-top: -15px; margin-bottom: 10px;"></i>
             <span>Office Feedback</span>
           </div>
         </a>
