--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             <span>Workday</span>
           </div>
         <a href="pages/feedback.html">
-          <div class="icon-update" id="workday">
-            <img src="images/workday.png" alt=""> <br>
+          <div class="icon-update" id="feedback">
+            <img src="images/feedback.png" alt=""> <br>
             <i id="secret" class="fa fa-user-secret fa-4x" aria-hidden="true" style="margin-top: -15px; margin-bottom: 10px;"></i>
             <span>Office Feedback</span>
           </div>
