--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -1,1 +1,157 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Ambassador Homepage</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/css/mdb.min.css" media="screen" title="no title">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" title="no title">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="styles/styles.css" media="screen" title="no title">
+  </head>
+  <body>
+    <nav>
+      <!-- <img src="logo_color.png" alt="" /> -->
+      <a id="logo-wrapper" href="index.html">
+        <img src="images/full.png" alt="">
+        <span>Student Ambassadors</span>
+      </a>
 
+      <div class="pages">
+        <a href="index.html"><li>Home</li></a>
+        <a href="./pages/extensions.html"><li>Extensions</li></a>
+        <a href="./pages/counselormap.html"><li>Counselor Map</li></a>
+        <a href="./feedback.html"><li>Office Feedback</li></a>
+      </div>
+    </nav>
+
+    <div class="wrapper">
+      <div class="links">
+        <a href="https://goo.gl/forms/lvfIohj0zyfdbyz23">
+          <div class="icon-update" id="conor_feedback">
+            <img style="height: 60px; width: auto;" src="images/asana.png" alt=""> <br>
+            <span style="font-size: 20px;">Conor</span>
+          </div>
+        </a>
+        <a href="https://goo.gl/forms/twE6ZhUQlfAdwTnY2">
+          <div class="icon" id="dylan_feedback">
+            <i class="fa fa-th-list fa-4x" aria-hidden="true"></i>
+            <span>Dylan</span>
+          </div>
+        </a>
+        <a href="https://www.google.com/calendar/render?pli=1#h">
+          <div class="icon" id="calendar">
+            <i class="fa fa-calendar fa-4x" aria-hidden="true"></i>
+            <span>Julia</span>
+          </div>
+        </a>
+        <a href="https://mail.google.com/mail/u/0/#inbox">
+          <div class="icon" id="gmail">
+            <i class="fa fa-envelope fa-4x" aria-hidden="true"></i>
+            <span>Maddie</span>
+          </div>
+        </a>
+        <!-- <a href="pages/saotm.html">
+          <div class="icon" id="saotm">
+            <i class="fa fa-user fa-4x" aria-hidden="true"></i>
+            <span>SAOTM</span>
+          </div>
+        </a> -->
+      <!-- TODO  -->
+      <!-- Workday -->
+    </div>
+    <footer>
+      <div id="champlain">
+        <img src="images/shield_color.png" alt=""/>
+        <span>LET US DARE</span>
+      </div>
+      <span id="footer-background"></span>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="./assets/timeago.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.2.0/js/mdb.min.js" charset="utf-8"></script>
+    <script src="./assets/tabletop.js" charset="utf-8"></script>
+    <script type="text/javascript">
+      $( document ).ready(function() {
+        // Intialize Updates Board
+        init();
+        $("#secret").hide();
+        // Set up incognito clicks
+        $("#coverage").click(function(event) {
+          event.preventDefault();
+          incognitoShake($(this));
+        });
+        $("#feedback").click(function(event) {
+          event.preventDefault();
+          incognitoShake($(this));
+        });
+        $("#workday").click(function(event) {
+          event.preventDefault();
+          incognitoShake($(this));
+        });
+      });
+      var public_spreadsheet_url = 'https://docs.google.com/spreadsheets/d/1VPJsWRqeBW6t7xn3JphKra1LwrmyJpstcjhJz0tTyDk/pubhtml';
+      function init() {
+        Tabletop.init( { key: public_spreadsheet_url,
+                         callback: showInfo,
+                         simpleSheet: true } )
+      }
+      var monthNames = [
+        "January", "February", "March",
+        "April", "May", "June", "July",
+        "August", "September", "October",
+        "November", "December"
+      ];
+      function showInfo(data, tabletop) {
+        $(".news .items").empty();
+        if (data.length == 0){
+          $(".news .items").append("<h3> No updates at this time </h3>").css("overflow-y", "hidden");
+        } else {
+          $(".news .items").css("overflow-y", "auto");
+          var i;
+          var today = new Date();
+          data.reverse().forEach(function(update){
+            var date = new Date(update.Timestamp);
+            var timeDiff = Math.abs(today.getTime() - date.getTime());
+            var diffDays = Math.floor(timeDiff / (1000 * 3600 * 24)) + 1;
+            if (diffDays <= 14)
+            {
+              $(".news .items").append(
+                '<tr class="item"> <td class="date">' + monthNames[date.getMonth()] + ' ' + date.getDate() + ': <br> <span style="color: #969696; font-size: 15px;"> (' + $.timeago(date.getTime()) + ') </span> ' + '</td> <td class="message">' + update.Message + '</td> </tr>'
+              );
+            }
+          });
+        }
+        setTimeout(function(){
+          init();
+        }, 10000);
+      }
+      function isMobile(){
+        return ($(".news").css("display") == "none") ? true : false;
+      }
+      function incognitoShake(element){
+        var text = isMobile() ? "HOLD → Open In Incognito" : "RIGHT CLICK → Open In Incognito";
+        var size = isMobile() ? "30px" : "";
+        var link = element.find("span").text();
+        element.css("background-color", "#EE3124");
+        element.find("span").css("font-size", size);
+        element.addClass("animated shake");
+        element.find("i").hide();
+        element.find("img").hide();
+        element.find("#secret").show();
+        element.find("span").text(text);
+        setTimeout(function(){
+          element.css("background-color", "rgba(35,31,32,.9)");
+          element.find("span").css("font-size", "");
+          element.removeClass("animated shake");
+          element.find("i").show();
+          element.find("img").show();
+          element.find("#secret").hide();
+          element.find("span").text(link);
+        }, 5000);
+      }
+    </script>
+  </body>
+</html>
