--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -40,14 +40,14 @@
             <span>Dylan</span>
           </div>
         </a>
-        <a href="https://www.google.com/calendar/render?pli=1#h">
-          <div class="icon" id="calendar">
+        <a href="https://goo.gl/forms/o79wpVm0tltqHnLl2">
+          <div class="icon" id="julia_feedback">
             <i class="fa fa-calendar fa-4x" aria-hidden="true"></i>
             <span>Julia</span>
           </div>
         </a>
-        <a href="https://mail.google.com/mail/u/0/#inbox">
-          <div class="icon" id="gmail">
+        <a href="https://goo.gl/forms/7BgyHmxAlZ2SeSyJ3">
+          <div class="icon" id="maddie_feedback">
             <i class="fa fa-envelope fa-4x" aria-hidden="true"></i>
             <span>Maddie</span>
           </div>
